--- a/TogetherSemiProject/src/main/resources/application.yml
+++ b/TogetherSemiProject/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://db-g66q7-kr.vpc-pub-cdb.ntruss.com:3306/bit701?serverTimezone=Asia/Seoul
-    username: study
-    password: bit123!@#
+    username: together
+    password: together123!@#
   servlet:
     multipart:
       max-file-size:
