--- a/TogetherSemiProject/src/main/resources/application.yml
+++ b/TogetherSemiProject/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 #port설정
 server:
-  port: 9005
+  port: 9000
   
 #mysql setting
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://db-g66q7-kr.vpc-pub-cdb.ntruss.com:3306/bit701?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://db-g92gp-kr.vpc-pub-cdb.ntruss.com:3306/together?serverTimezone=Asia/Seoul
     username: together
     password: together123!@#
   servlet:
