--- a/TogetherSemiProject/src/main/resources/application.yml
+++ b/TogetherSemiProject/src/main/resources/application.yml
@@ -13,6 +13,23 @@ spring:
     multipart:
       max-file-size:
         20MB
+  #email
+  mail:
+  # host, port는 naver에서 정해준 값
+    host: smtp.naver.com
+    port: 465
+    # 본인 naver 계정 정보 삽입
+    username: together2jo@naver.com
+    password: qlxmzoavm701!@
+    protocol: smtp
+    # 전송하기 위한 prop으로 ssl의 신뢰, 권한 등 사용허가
+    properties:
+      mail:
+        smtp:
+          auth: true
+          ssl:
+            enable: true
+            required: true
     
 #mybatis
 mybatis:
