--- a/TogetherSemiProject/src/main/resources/application.yml
+++ b/TogetherSemiProject/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
     port: 465
     # 본인 naver 계정 정보 삽입
     username: together2jo@naver.com
-    password: qlxmzoavm701!@
+    password: ekgkaRp701!@
     protocol: smtp
     # 전송하기 위한 prop으로 ssl의 신뢰, 권한 등 사용허가
     properties:
